--- a/Lab0/index.html
+++ b/Lab0/index.html
@@ -12,13 +12,13 @@
     </div>
 
     <ul>
-        <li><a href="ab3656.github.io/Lab0/">Lab0 - My Homepage</a></li>
-        <li><a href="ab3656.github.io/Lab1/">Lab1 - About Me</a></li>
-        <li><a href="ab3656.github.io/Lab2/">Lab2 - Servlet Introduction</a></li>
-        <li><a href="ab3656.github.io/Lab3/">Lab3 - Simple Calculator</a></li>
-        <li><a href="ab3656.github.io/Lab4/">Lab4 - Quiz Servlet</a></li>
-        <li><a href="ab3656.github.io/Lab5/">Lab5 - JSP Version Quiz Servlet</a></li>
-        <li><a href="ab3656.github.io/Lab6/">Lab6 - JSP Custom Tags</a></li>
+        <li><a href="Lab0/">Lab0 - My Homepage</a></li>
+        <li><a href="Lab1/">Lab1 - About Me</a></li>
+        <li><a href="Lab2/">Lab2 - Servlet Introduction</a></li>
+        <li><a href="Lab3/">Lab3 - Simple Calculator</a></li>
+        <li><a href="Lab4/">Lab4 - Quiz Servlet</a></li>
+        <li><a href="Lab5/">Lab5 - JSP Version Quiz Servlet</a></li>
+        <li><a href="Lab6/">Lab6 - JSP Custom Tags</a></li>
         <li><a href="">Lab7 - Javascript Exercises</a></li>
         <li><a href="">Lab8 - Decorate My Text</a></li>
         <li><a href="">Lab9 - Modules and Closure</a></li>
