--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h3> Welcome, Amit!</h3>
     <div>
-        <img src="images/user.png" alt ="avatar" />
+        <img src="images/user.jpg" alt ="avatar" />
     </div>
 
     <ul>
