--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 <body>
     <h3> Welcome, Amit!</h3>
     <div>
-        <img src="images/user.jpg" alt ="avatar" />
+        <img src="images/user.jpg" style="width:200px;height:200px;" alt ="avatar" />
     </div>
+
 
     <ul>
         <li><a href="Lab0/">Lab0 - My Homepage</a></li>
