--- a/Lab0/index.html
+++ b/Lab0/index.html
@@ -8,7 +8,7 @@
 <body>
     <h3> Welcome, Amit!</h3>
     <div>
-        <img src="images/user.jpg" alt ="avatar" />
+        <img src="images/user.jpg" style="width:200px;height:200px;" alt ="avatar" />
     </div>
 
     <ul>
