Added new elements

--- a/Lab1/aboutme.html
+++ b/Lab1/aboutme.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>About Amit Bhattarai</h1>
-        <p>My name is Amit and I am <span>funny, kind</span> and <span>generous</span></p>
+        <p class="para">My name is Amit and I am <span>funny, kind</span> and <span>generous</span></p>
         
         <hr>
     <h4>My Classes This Quarter</h4>
@@ -17,9 +17,23 @@
         <li>CS 435 - Algorithms</li>    
     </ul>
     <h4>My Favorite Movies</h4>
-    <p><em>Yeah I am a nerd!!</em></p>
+    <p class="para"><em>Yeah I am a nerd!!</em></p>
     <ol>
         <li>Akira(<a href = "www.imdb.com/title/tt0094625/">IMDB</a>)</li>
+        <dl>
+            <dt><span>Director</span></dt>
+            <dd>Katsuhiro Ôtomo</dd>
+            <dt><span>Genre</span></dt>
+            <dd>Animation, Action, Drama </dd>
+            <dt><span>Tagline</span></dt>
+            <dd>The end of the world was only the beginning</dd>
+            <dt><span>Plot Outline</span></dt>
+            <dd>A secret military project endangers 
+                Neo-Tokyo when it turns a biker gang 
+                member into a rampaging psychic psychopath 
+                who can only be stopped by two teenagers 
+                and a group of psychics.</dd>
+        </dl>
         <li>Interstellar(<a href = "www.imdb.com/title/tt0816692/">IMDB</a>)</li>
         <li>Before Sunrise(<a href = "www.imdb.com/title/tt0112471/">IMDB</a>)</li>
     </ol>
@@ -34,12 +48,12 @@
         <li>Sameer Maharjan : <em>Silent</em> guy</li>
     </ul>
     <a href="http://validator.w3.org/check/referer">
-        <img id = "validator"src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
+        <img class = "validator"src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
         alt="html validator"/>
         </a>
 
     <a href="http://jigsaw.w3.org/css-validator/check/referer">
-            <img id = "validator"src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
+            <img class = "validator"src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
             alt="html validator"/>
     </a>
 </body>
