--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
         <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
         alt="html validator"/>
         </a>
+		<a href="http://jigsaw.w3.org/css-validator/check/referer">
+                <img class = "validator"src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
+                alt="html validator"/>
+        </a>
 </body>
 
 </html>
