--- a/HW1/pie.html
+++ b/HW1/pie.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title> Grandma's Lemon Meringue Pie</title>
         <link rel="stylesheet" type="text/css" href="css/recipe.css"/>
@@ -87,12 +87,12 @@
 <a href="../index.html">Home</a>
 <div class="validators">
         <a href="http://validator.w3.org/check/referer">
-            <img class = "validator"src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
+            <img class = "validator" src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
             alt="html validator"/>
             </a>
     
         <a href="http://jigsaw.w3.org/css-validator/check/referer">
-                <img class = "validator"src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
+                <img class = "validator" src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
                 alt="html validator"/>
         </a>
 </div>
