--- a/Lab0/index.html
+++ b/Lab0/index.html
@@ -13,8 +13,8 @@
 
     <ul>
         <li><a href="../Lab0/">Lab0 - My Homepage</a></li>
-        <li><a href="../Lab1/">Lab1 - About Me</a></li>
-        <li><a href="../Lab2/">Lab2 - Servlet Introduction</a></li>
+        <li><a href="../Lab1/aboutme">Lab1 - About Me</a></li>
+        <li><a href="../HW1/pie">Lab2 - Servlet Introduction</a></li>
         <li><a href="../Lab3/">Lab3 - Simple Calculator</a></li>
         <li><a href="../Lab4/">Lab4 - Quiz Servlet</a></li>
         <li><a href="../Lab5/">Lab5 - JSP Version Quiz Servlet</a></li>
