--- a/Lab1/aboutme.html
+++ b/Lab1/aboutme.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>About Me</title>
         <link rel="stylesheet" href="css/styleme.css">
@@ -19,7 +19,7 @@
     <h4>My Favorite Movies</h4>
     <p class="para"><em>Yeah I am a nerd!!</em></p>
     <ol>
-        <li>Akira(<a href = "www.imdb.com/title/tt0094625/">IMDB</a>)</li>
+        <li>Akira(<a href = "www.imdb.com/title/tt0094625/">IMDB</a>)
         <dl>
             <dt><span>Director</span></dt>
             <dd>Katsuhiro Ôtomo</dd>
@@ -33,7 +33,7 @@
                 member into a rampaging psychic psychopath 
                 who can only be stopped by two teenagers 
                 and a group of psychics.</dd>
-        </dl>
+        </dl></li>
         <li>Interstellar(<a href = "www.imdb.com/title/tt0816692/">IMDB</a>)</li>
         <li>Before Sunrise(<a href = "www.imdb.com/title/tt0112471/">IMDB</a>)</li>
     </ol>
@@ -48,12 +48,12 @@
         <li>Sameer Maharjan : <em>Silent</em> guy</li>
     </ul>
     <a href="http://validator.w3.org/check/referer">
-        <img class = "validator"src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
+        <img class = "validator" src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
         alt="html validator"/>
         </a>
 
     <a href="http://jigsaw.w3.org/css-validator/check/referer">
-            <img class = "validator"src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
+            <img class = "validator" src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
             alt="html validator"/>
     </a>
 </body>
