--- a/HW1/pie.html
+++ b/HW1/pie.html
@@ -63,7 +63,7 @@
 <p>
     This is our favorite recipe here at Granny's Pies. It has been enjoyed by pie fans for many years. It's Granny's favorite! We hope you'll find that this recipe is delicious and also easy to follow; it's a piece of <span id="cake">cake</span> pie!
 </p>
-<h1>USER COMMENTS</h1>
+<h1><span>USER COMMENTS</span></h1>
 
     <p class="quotes">This is a very fun recipe to follow, because Grandma makes it sweet and simple. This pie is thickened with cornstarch and flour in addition to egg yolks, and contains no milk.
         <br><br>
