--- a/HW2/tmnt.html
+++ b/HW2/tmnt.html
@@ -17,8 +17,8 @@
 		<h1>TMNT (2007)</h1>
         
         <div class="container">
-            <div class="rightConntainer">
-		<div class="rotten-image">
+            <div class="rightContainer">
+		<div>
 			<img src="images/overview.png" alt="general overview" />
 		</div>
 
@@ -64,12 +64,11 @@
 			</dd>
 		</dl>
     </div>
-    <div class="leftContainer">
-		<div>
+    <div class="rotten-image">
 			<img src="images/rottenbig.png" alt="Rotten" />
 			33%
-		</div>
-		
+	</div>
+    <div class="leftContainer">	
 		<p>
 			<img src="images/rotten.gif" alt="Rotten" />
 			<q>Ditching the cheeky, self-aware wink that helped to excuse the concept's inherent corniness, the movie attempts to look polished and 'cool,' but the been-there animation can't compete with the then-cutting-edge puppetry of the 1990 live-action movie.</q>
