--- a/HW2/tmnt.html
+++ b/HW2/tmnt.html
@@ -66,10 +66,11 @@
     </div>
     <div class="rotten-image">
 			<img src="images/rottenbig.png" alt="Rotten" />
-			33%
+			<span class="rating" >33%</span>
 	</div>
     <div class="leftContainer">	
-		<p>
+        <div class="left-column">
+		<p class="review">
 			<img src="images/rotten.gif" alt="Rotten" />
 			<q>Ditching the cheeky, self-aware wink that helped to excuse the concept's inherent corniness, the movie attempts to look polished and 'cool,' but the been-there animation can't compete with the then-cutting-edge puppetry of the 1990 live-action movie.</q>
 		</p>
@@ -79,7 +80,7 @@
 			Variety
 		</p>
 
-		<p>
+		<p class="review">
 			<img src="images/fresh.gif" alt="Fresh" />
 			<q>TMNT is a fun, action-filled adventure that will satisfy longtime fans and generate a legion of new ones.</q>
 		</p>
@@ -89,7 +90,7 @@
 			IGN Movies
 		</p>
 
-		<p>
+		<p class="review">
 			<img src="images/rotten.gif" alt="Rotten" />
 			<q>It stinks!</q>
 		</p>
@@ -98,7 +99,7 @@
 			Jay Sherman (unemployed)
 		</p>
 
-		<p>
+		<p class="review">
 			<img src="images/rotten.gif" alt="Rotten" />
 			<q>The rubber suits are gone and they've been redone with fancy computer technology, but that hasn't stopped them from becoming dull.</q>
 		</p>
@@ -108,7 +109,7 @@
 			CinemaBlend.com
 		</p>
 
-		<p>
+		<p class="review">
 			<img src="images/rotten.gif" alt="Rotten" />
 			<q>YOUR REVIEW HERE</q>
 		</p>
@@ -116,9 +117,10 @@
 			<img src="images/critic.gif" alt="Critic" />
 			NAME <br />
 			PUBLICATION
-		</p>
-
-		<p>
+        </p>
+    </div>
+    <div class="right-column">
+		<p class="review">
 			<img src="images/rotten.gif" alt="Rotten" />
 			<q>The turtles themselves may look prettier, but are no smarter; torn irreparably from their countercultural roots, our superheroes on the half shell have been firmly co-opted by the industry their creators once sought to spoof.</q>
 		</p>
@@ -128,7 +130,7 @@
 			New York Times
 		</p>
 
-		<p>
+		<p class="review">
 			<img src="images/rotten.gif" alt="Rotten" />
 			<q>Impersonally animated and arbitrarily plotted, the story appears to have been made up as the filmmakers went along.</q>
 		</p>
@@ -138,7 +140,7 @@
 			Slant Magazine
 		</p>
 
-		<p>
+		<p class="review">
 			<img src="images/fresh.gif" alt="Fresh" />
 			<q>The striking use of image and motion allows each sequence to leave an impression. It's an accomplished restart to this franchise.</q>
 		</p>
@@ -148,7 +150,7 @@
 			Coast (Halifax, Nova Scotia)
 		</p>
 
-		<p>
+		<p class="review">
 			<img src="images/rotten.gif" alt="Rotten" />
 			<q>The script feels like it was computer generated. This mechanical presentation lacks the cheesy charm of the three live action films.</q>
 		</p>
@@ -158,7 +160,7 @@
 			Internet Reviews
 		</p>
 
-		<p>
+		<p class="review">
 			<img src="images/rotten.gif" alt="Rotten" />
 			<q>YOUR REVIEW HERE</q>
 		</p>
@@ -166,9 +168,10 @@
 			<img src="images/critic.gif" alt="Critic" />
 			NAME <br />
 			PUBLICATION
-		</p>
+        </p>
     </div>
-		<p>(1-10) of 88</p>
+    </div>
+		<p class="pageFooter">(1-10) of 88</p>
     </div>
 		<div>
 			<a href="http://validator.w3.org/check/referer"><img src="images/w3c-html.png" alt="Valid HTML5" /></a> <br />
