--- a/HW2/tmnt.html
+++ b/HW2/tmnt.html
@@ -17,7 +17,7 @@
 		<h1>TMNT (2007)</h1>
         
         <div class="container">
-            <div class="rightContainer">
+        <div class="rightContainer">
 		<div>
 			<img src="images/overview.png" alt="general overview" />
 		</div>
@@ -69,7 +69,7 @@
 			<span class="rating" >33%</span>
 	</div>
     <div class="leftContainer">	
-        <div class="left-column">
+        <div class="column">
 		<p class="review">
 			<img src="images/rotten.gif" alt="Rotten" />
 			<q>Ditching the cheeky, self-aware wink that helped to excuse the concept's inherent corniness, the movie attempts to look polished and 'cool,' but the been-there animation can't compete with the then-cutting-edge puppetry of the 1990 live-action movie.</q>
@@ -118,8 +118,7 @@
 			NAME <br />
 			PUBLICATION
         </p>
-    </div>
-    <div class="right-column">
+    
 		<p class="review">
 			<img src="images/rotten.gif" alt="Rotten" />
 			<q>The turtles themselves may look prettier, but are no smarter; torn irreparably from their countercultural roots, our superheroes on the half shell have been firmly co-opted by the industry their creators once sought to spoof.</q>
