--- a/HW2/tmnt.html
+++ b/HW2/tmnt.html
@@ -82,7 +82,7 @@
 							the movie attempts to look polished and 'cool,' but the been-there animation can't compete
 							with the then-cutting-edge puppetry of the 1990 live-action movie.</q>
 					</p>
-					<p>
+					<p class="author">
 						<img src="images/critic.gif" alt="Critic" />
 						Peter Debruge <br />
 						Variety
@@ -94,7 +94,7 @@
 						<q>TMNT is a fun, action-filled adventure that will satisfy longtime fans and generate a legion
 							of new ones.</q>
 					</p>
-					<p>
+					<p class="author">
 						<img src="images/critic.gif" alt="Critic" />
 						Todd Gilchrist <br />
 						IGN Movies
@@ -105,7 +105,7 @@
 						<img src="images/rotten.gif" alt="Rotten" />
 						<q>It stinks!</q>
 					</p>
-					<p>
+					<p class="author">
 						<img src="images/critic.gif" alt="Critic" />
 						Jay Sherman (unemployed)
 					</p>
@@ -116,7 +116,7 @@
 						<q>The rubber suits are gone and they've been redone with fancy computer technology, but that
 							hasn't stopped them from becoming dull.</q>
 					</p>
-					<p>
+					<p class="author">
 						<img src="images/critic.gif" alt="Critic" />
 						Joshua Tyler <br />
 						CinemaBlend.com
@@ -127,7 +127,7 @@
 						<img src="images/rotten.gif" alt="Rotten" />
 						<q>Turtles are awesome!!</q>
 					</p>
-					<p>
+					<p class="author">
 						<img src="images/critic.gif" alt="Critic" />
 						Amit Bhattarai <br />
 						New York Times
@@ -144,7 +144,7 @@
 							countercultural roots, our superheroes on the half shell have been firmly co-opted by the
 							industry their creators once sought to spoof.</q>
 					</p>
-					<p>
+					<p class="author">
 						<img src="images/critic.gif" alt="Critic" />
 						Jeannette Catsoulis <br />
 						New York Times
@@ -156,7 +156,7 @@
 						<q>Impersonally animated and arbitrarily plotted, the story appears to have been made up as the
 							filmmakers went along.</q>
 					</p>
-					<p>
+					<p class="author">
 						<img src="images/critic.gif" alt="Critic" />
 						Ed Gonzalez <br />
 						Slant Magazine
@@ -168,7 +168,7 @@
 						<q>The striking use of image and motion allows each sequence to leave an impression. It's an
 							accomplished restart to this franchise.</q>
 					</p>
-					<p>
+					<p class="author">
 						<img src="images/critic.gif" alt="Critic" />
 						Mark Palermo <br />
 						Coast (Halifax, Nova Scotia)
@@ -180,7 +180,7 @@
 						<q>The script feels like it was computer generated. This mechanical presentation lacks the
 							cheesy charm of the three live action films.</q>
 					</p>
-					<p>
+					<p class="author">
 						<img src="images/critic.gif" alt="Critic" />
 						Steve Rhodes <br />
 						Internet Reviews
@@ -191,7 +191,7 @@
 						<img src="images/rotten.gif" alt="Rotten" />
 						<q>Raphael's acting was impeccable!</q>
 					</p>
-					<p>
+					<p class="author">
 						<img src="images/critic.gif" alt="Critic" />
 						Barack Obama <br />
 						The White House
