--- a/HW2/tmnt.html
+++ b/HW2/tmnt.html
@@ -85,7 +85,7 @@
 					<p class="author">
 						<img src="images/critic.gif" alt="Critic" />
 						Peter Debruge <br />
-						Variety
+						<span class="magazine">Variety</span>
 					</p>
 				</div>
 				<div class="reviews">
@@ -97,7 +97,7 @@
 					<p class="author">
 						<img src="images/critic.gif" alt="Critic" />
 						Todd Gilchrist <br />
-						IGN Movies
+						<span class="magazine">IGN Movies</span>
 					</p>
 				</div>
 				<div class="reviews">
@@ -119,7 +119,7 @@
 					<p class="author">
 						<img src="images/critic.gif" alt="Critic" />
 						Joshua Tyler <br />
-						CinemaBlend.com
+						<span class="magazine">CinemaBlend.com</span>
 					</p>
 				</div>
 				<div class="reviews">
@@ -130,7 +130,7 @@
 					<p class="author">
 						<img src="images/critic.gif" alt="Critic" />
 						Amit Bhattarai <br />
-						New York Times
+						<span class="magazine">New York Times</span>
 					</p>
 				</div>
 
@@ -147,7 +147,7 @@
 					<p class="author">
 						<img src="images/critic.gif" alt="Critic" />
 						Jeannette Catsoulis <br />
-						New York Times
+						<span class="magazine">New York Times</span>
 					</p>
 				</div>
 				<div class="reviews">
@@ -159,7 +159,7 @@
 					<p class="author">
 						<img src="images/critic.gif" alt="Critic" />
 						Ed Gonzalez <br />
-						Slant Magazine
+						<span class="magazine">Slant Magazine</span>
 					</p>
 				</div>
 				<div class="reviews">
@@ -171,7 +171,7 @@
 					<p class="author">
 						<img src="images/critic.gif" alt="Critic" />
 						Mark Palermo <br />
-						Coast (Halifax, Nova Scotia)
+						<span class="magazine">Coast (Halifax, Nova Scotia)</span>
 					</p>
 				</div>
 				<div class="reviews">
@@ -183,7 +183,7 @@
 					<p class="author">
 						<img src="images/critic.gif" alt="Critic" />
 						Steve Rhodes <br />
-						Internet Reviews
+						<span class="magazine">Internet Reviews</span>
 					</p>
 				</div>
 				<div class="reviews">
@@ -194,7 +194,7 @@
 					<p class="author">
 						<img src="images/critic.gif" alt="Critic" />
 						Barack Obama <br />
-						The White House
+						<span class="magazine">The White House</span>
 					</p>
 				</div>
 			</div>
