--- a/HW4/signup.html
+++ b/HW4/signup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<!-- CSE 190 M Homework 4 (NerdLuv) -->
 	<!-- shared page top HTML -->
 
@@ -42,9 +42,9 @@
                 </select>
                 <br>
                 <label class="left"><Strong>Seeking age: </Strong></label>
-                <input type="text" name="min" max-length="2"size="6" placeholder="min">
+                <input type="text" name="min" size="6" max-length="2" placeholder="min">
                 <label>to</label>
-                <input type="text" name="max" max-length="2" size="6" placeholder="max"><br>
+                <input type="text" name="max" size="6" max-length="2" placeholder="max"><br>
             
                 <input type="submit" value="Sign Up">
             </fieldset>
