--- a/HW4/signup.html
+++ b/HW4/signup.html
@@ -23,9 +23,9 @@
         <form action="submit">
             <fieldset>
                 <legend>New User Signup:</legend>
-                <label for="name" class="left"><strong>Name:</strong></label>
+                <label class="left"><strong>Name:</strong></label>
                 <input type="text" name="name" maxlength="16"><br>
-                <label for="gender" class="left"><strong>Gender:</strong></label>
+                <label class="left"><strong>Gender:</strong></label>
                 <label><input type="radio" name="gender" value="male">Male</label>
                 <label><input type="radio" name="gender" value="female" checked>Female</label>
                 <br>
@@ -74,7 +74,7 @@
                 alt="html validator"/>
                 </a>
                 <a href="http://jigsaw.w3.org/css-validator/check/referer">
-                        <img class = "validator"src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
+                        <img class = "validator" src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
                         alt="html validator"/>
                 </a>
 		</footer>
