--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<li><a href="HW1/pie">HW1 - Grandma's Pie Recipe</a></li>
 		<li><a href="HW2/tmnt">HW2 - Movie Review</a></li>
 		<li><a href="HW4/signup">HW4 - NerdLuv</a></li>
-		<li><a href="grades">Grades</a></li>
+		<li><a href="Grades">Grades</a></li>
         <li><a href="Lab2/">Lab2 - Servlet Introduction</a></li>
         <li><a href="Lab3/">Lab3 - Simple Calculator</a></li>
         <li><a href="Lab4/">Lab4 - Quiz Servlet</a></li>
