--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<li><a href="HW2/tmnt">HW2 - Movie Review</a></li>
 		<li><a href="HW4/signup">HW4 - NerdLuv</a></li>
 		<li><a href="Grades">Grades</a></li>
-		<li><a href="Quiz/ServletQuiz.txt">ServletQuiz</a></li>
+		<li><a href="Quiz/">ServletQuiz</a></li>
         <li><a href="Lab2/">Lab2 - Servlet Introduction</a></li>
         <li><a href="Lab3/">Lab3 - Simple Calculator</a></li>
         <li><a href="Lab4/">Lab4 - Quiz Servlet</a></li>
