--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		<li><a href="HW4/signup">HW4 - NerdLuv</a></li>
 		<li><a href="Grades">Grades</a></li>
 		<li><a href="Quiz/">ServletQuiz</a></li>
+		<li><a href="StateManagementQuiz/">State Management Quiz</a></li>
     </ul>
     <a href="http://validator.w3.org/check/referer">
         <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
