--- a/JSPQuiz/index.html
+++ b/JSPQuiz/index.html
@@ -114,7 +114,7 @@
         </dd>
         <dt>Explain how servlets and JSPs use request dispatch to interact. </dt>
         <dd>
-               Servlets and JSP use request dispatch to dispatches requests to other JSPs or servlets.
+               Servlets and JSP use request dispatch to set and get attributes to other JSPs or servlets.
         </dd>
     </dl>
 </body>
