--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 
     <ul>
+	
         <li><a href="Lab0/">Lab0 - My Homepage</a></li>
         <li><a href="Lab1/aboutme">Lab1 - About Me</a></li>
 		<li><a href="HW1/pie">HW1 - Grandma's Pie Recipe</a></li>
@@ -22,6 +23,7 @@
 		<li><a href="Quiz/">ServletQuiz</a></li>
 		<li><a href="StateManagementQuiz/">State Management Quiz</a></li>
 		<li><a href="JSPQuiz/">JSP Quiz</a></li>
+		<li><a href="JSPCustomTagsQuiz/">JSP Custom Tags Quiz</a></li>
     </ul>
     <a href="http://validator.w3.org/check/referer">
         <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
