--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
 		<li><a href="StateManagementQuiz/">State Management Quiz</a></li>
 		<li><a href="JSPQuiz/">JSP Quiz</a></li>
 		<li><a href="JSPCustomTagsQuiz/">JSP Custom Tags Quiz</a></li>
+		<li>JavascriptLab5A
+			<ul>
+			<li><a href="JavascriptLab5A/buggy_page_#1/buggy1"></a></li>
+			<li><a href="JavascriptLab5A/buggy_page_#2/buggy2"></a></li>
+			<li><a href="JavascriptLab5A/buggy_page_#3/buggy3"></a></li>
+			<li><a href="JavascriptLab5A/buggy_page_#4/buggy4"></a></li>
+			</ul>
+		</li>
     </ul>
     <a href="http://validator.w3.org/check/referer">
         <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
