--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 		<li><a href="JSPCustomTagsQuiz/">JSP Custom Tags Quiz</a></li>
 		<li>JavascriptLab5A
 			<ul>
-			<li><a href="JavascriptLab5A/buggy_page_#1/buggy1">buggy1</a></li>
-			<li><a href="JavascriptLab5A/buggy_page_#2/buggy2">buggy2</a></li>
-			<li><a href="JavascriptLab5A/buggy_page_#3/buggy3">buggy3</a></li>
-			<li><a href="JavascriptLab5A/buggy_page_#4/buggy4">buggy4</a></li>
+			<li><a href="JavascriptLab5A/buggy_page_#1/buggy1.html">buggy1</a></li>
+			<li><a href="JavascriptLab5A/buggy_page_#2/buggy2.html">buggy2</a></li>
+			<li><a href="JavascriptLab5A/buggy_page_#3/buggy3.html">buggy3</a></li>
+			<li><a href="JavascriptLab5A/buggy_page_#4/buggy4.html">buggy4</a></li>
 			</ul>
 		</li>
     </ul>
