--- a/index.html
+++ b/index.html
@@ -24,13 +24,18 @@
 		<li><a href="StateManagementQuiz/">State Management Quiz</a></li>
 		<li><a href="JSPQuiz/">JSP Quiz</a></li>
 		<li><a href="JSPCustomTagsQuiz/">JSP Custom Tags Quiz</a></li>
-		<li>JavascriptLab5A
+		<li>JavascriptLabs
+			<ol>
+			<li>JavascriptLab5A
 			<ul>
-			<li><a href="JavascriptLab5A/buggy1">buggy1</a></li>
-			<li><a href="JavascriptLab5A/buggy2">buggy2</a></li>
-			<li><a href="JavascriptLab5A/buggy3">buggy3</a></li>
-			<li><a href="JavascriptLab5A/buggy4">buggy4</a></li>
+				<li><a href="JavascriptLabs/JavascriptLab5A/buggy1">buggy1</a></li>
+				<li><a href="JavascriptLabs/JavascriptLab5A/buggy2">buggy2</a></li>
+				<li><a href="JavascriptLabs/JavascriptLab5A/buggy3">buggy3</a></li>
+				<li><a href="JavascriptLabs/JavascriptLab5A/buggy4">buggy4</a></li>
 			</ul>
+			<li><a href="JavascriptLabs/JavascriptLab5A/Onclick">Onclick Alert</a></li>
+			<li><a href="JavascriptLabs/JavascriptLab5A/Tipcalculator">Tip Calculator</a></li>
+			</ol>
 		</li>
     </ul>
     <a href="http://validator.w3.org/check/referer">
