--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 				<li><a href="JavascriptLabs/JavascriptLab5A/buggy3">buggy3</a></li>
 				<li><a href="JavascriptLabs/JavascriptLab5A/buggy4">buggy4</a></li>
 			</ul>
-			<li><a href="JavascriptLabs/JavascriptLab5A/Onclick">Onclick Alert</a></li>
-			<li><a href="JavascriptLabs/JavascriptLab5A/Tipcalculator">Tip Calculator</a></li>
+			<li><a href="JavascriptLabs/Onclick">Onclick Alert</a></li>
+			<li><a href="JavascriptLabs/Tipcalculator">Tip Calculator</a></li>
 			</ol>
 		</li>
     </ul>
