--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 			<li><a href="JavascriptLabs/Tipcalculator/tip">Tip Calculator</a></li>
 			</ol>
 		</li>
+		<li><a href="JavascriptTimerExercise/">Javascript Timer Exercise</a></li>
     </ul>
     <a href="http://validator.w3.org/check/referer">
         <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
