--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 			</ol>
 		</li>
 		<li><a href="JavascriptTimerExercise/">Javascript Timer Exercise</a></li>
+		<li><a href="DecorateMyText/decoratemytext">Javascript Timer Exercise</a></li>
     </ul>
     <a href="http://validator.w3.org/check/referer">
         <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
