--- a/ASCIIAnimation/ascii.html
+++ b/ASCIIAnimation/ascii.html
@@ -15,12 +15,12 @@
         <div class="fields">
         <fieldset>
             <legend>Play Controls:</legend>
-            <button id="start" name="Start" onclick="startAnimation();">Start</button>
-            <button id="stop" name="Stop" onclick="stopAnimation();">Stop</button>
+            <button id="start" name="Start">Start</button>
+            <button id="stop" name="Stop">Stop</button>
         </fieldset>
         <fieldset>
             <legend>Animation:</legend>
-            <select id="animation" onchange="setAnimation();">
+            <select id="animation">
                 <option>Bike</option>
                 <option>Exercise</option>
                 <option>Juggler</option>
@@ -31,7 +31,7 @@
         </fieldset>
         <fieldset>
             <legend>Size:</legend>
-            <select onchange="selectSize();">
+            <select id="size">
                 <option>Tiny</option>
                 <option>Small</option>
                 <option selected>Medium</option>
@@ -42,7 +42,7 @@
         </fieldset>
         <fieldset>
             <legend>Speed:</legend>
-            <label><input type="checkbox" id="speed" onchange="selectSpeed();"/>Turbo</label>
+            <label><input type="checkbox" id="speed"/>Turbo</label>
         </fieldset>
     </div>
     <div class="footer">
