--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 		</li>
 		<li><a href="JavascriptTimerExercise/">Javascript Timer Exercise</a></li>
 		<li><a href="DecorateMyText/decoratemytext">Decorate My Text</a></li>
+		<li><a href="ASCIIAnimation/ascii">ASCIIAnimation</a></li>
     </ul>
     <a href="http://validator.w3.org/check/referer">
         <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
