--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 		<li><a href="JavascriptTimerExercise/">Javascript Timer Exercise</a></li>
 		<li><a href="DecorateMyText/decoratemytext">Decorate My Text</a></li>
 		<li><a href="ASCIIAnimation/ascii">HW 8 - ASCIIAnimation</a></li>
+		<li><a href="JavascriptScopeExercises/">JavascriptScopeExercises</a></li>
 		<li>Module Closure Lab
 		<ul>
 		<li><a href="ModuleClosureLab\BankAccount">Bank Account</a>
