--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<li><a href="JavascriptTimerExercise/">Javascript Timer Exercise</a></li>
 		<li><a href="DecorateMyText/decoratemytext">Decorate My Text</a></li>
 		<li><a href="ASCIIAnimation/ascii">HW 8 - ASCIIAnimation</a></li>
-		<li><a href="JavascriptScopeExercises/">JavascriptScopeExercises</a></li>
+		<li><a href="JavascriptScopeExercises/">Javascript Scope Exercises</a></li>
 		<li>Module Closure Lab
 		<ul>
 		<li><a href="ModuleClosureLab\BankAccount">Bank Account</a>
@@ -49,6 +49,7 @@
 		</li>
 		</ul>
 		</li>
+		<li><a href="JavascriptModuleExercises/">Javascript Module Exercises</a></li>
     </ul>
     <a href="http://validator.w3.org/check/referer">
         <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
