--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 		</li>
 		<li><a href="JavascriptModuleExercises/">Javascript Module Exercises</a></li>
 		<li><a href="MouseMaze/maze">MouseMaze</a></li>
+		<li><a href="jQueryQuizI/">jQuery Quiz I</a></li>
     </ul>
     <a href="http://validator.w3.org/check/referer">
         <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
