--- a/jQueryQuizII/index.html
+++ b/jQueryQuizII/index.html
@@ -11,9 +11,11 @@
         <li>
             Answer:<Br>
             All the code fragments are equivalent. 
-            Its because the this keyword refers to the 
-            JQuery object "li".
-
+            The e parameter in the first function 
+            is the same as the this keyword in subsequent
+            functions. Whatever the name of the parameters,
+            the first parameter is the index and second is the 
+            value. 
         </li>
         <br>
         <li>
