--- a/15Puzzle/fifteen.html
+++ b/15Puzzle/fifteen.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<!--
 	CSE 190 M, Homework 7: Fifteen Puzzle
 	You should not modify fifteen.html.  Your JS code should work with an
@@ -16,7 +16,7 @@
 
 		<!-- your files that you will write -->
 		<link href="fifteen.css" type="text/css" rel="stylesheet" />
-		<script src="fifteen.js" type="text/javascript"></script>
+		<script src="fifteen.js" ></script>
 	</head>
 
 	<body>
